# mpmath

./: .backportrc.json  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES  CITATION.bib  LICENSE  MANIFEST  MANIFEST.in  README  README.rst  TODO  conftest.py  epydoc.conf  gallery.py  pkgdocs.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  xyz.py
.github/: CONTRIBUTING.rst  dependabot.yml
.github/workflows/: backport.yml  coverage.yml  docs.yml  linter.yml  publish.yml  test.yml
demo/: mandelbrot.py  manydigits.py  pidigits.py  plotting.py  sofa.py  taylor.py  taylordemo.py
doc/: build.py  manual.html  manual.rst  mk_html.py  mk_pdf.py  run_doctest.py  tag_docs.py
doc/source/: basics.txt  calculus.txt  conf.py  contexts.txt  functions.txt  identification.txt  index.txt  integration.txt  interpolation.txt  intervals.txt  limits.txt  matrices.txt  optimization.txt  references.txt  setup.txt  summation.txt  technical.txt
doc/source/calculus/: differentiation.txt  index.txt  integration.txt  inverselaplace.txt  odes.txt  optimization.txt  sums_limits.txt
docs/: basics.rst  cli.rst  conf.py  contexts.rst  general.rst  identification.rst  index.rst  matrices.rst  plotting.rst  references.rst  setup.rst  sg_execution_times.rst  technical.rst
docs/auto_plots/: ai.codeobj.json  ai.ipynb  ai.py  ai.py.md5  ai.rst  ai_c.codeobj.json  ai_c.ipynb  ai_c.py  ai_c.py.md5  ai_c.rst  ber.codeobj.json  ber.ipynb  ber.py  ber.py.md5  ber.rst  besseli.codeobj.json  besseli.ipynb  besseli.py  besseli.py.md5  besseli.rst  besseli_c.codeobj.json  besseli_c.ipynb  besseli_c.py  besseli_c.py.md5  besseli_c.rst  besselj.codeobj.json  besselj.ipynb  besselj.py  besselj.py.md5  besselj.rst  besselj_c.codeobj.json  besselj_c.ipynb  besselj_c.py  besselj_c.py.md5  besselj_c.rst  besselk.codeobj.json  besselk.ipynb  besselk.py  besselk.py.md5  besselk.rst  (+183 more)
docs/calculus/: index.rst  integration.rst  inverselaplace.rst  optimization.rst  polynomials.rst  sums_limits.rst
docs/functions/: bessel.rst  constants.rst  elliptic.rst  expintegrals.rst  gamma.rst  hyperbolic.rst  hypergeometric.rst  index.rst  numtheory.rst  orthogonal.rst  powers.rst  qfunctions.rst  signals.rst  signals.txt  trigonometric.rst  zeta.rst
docs/plots/: README.rst  ai.py  ai_c.py  ber.py  besseli.py  besseli_c.py  besselj.py  besselj_c.py  besselk.py  besselk_c.py  bessely.py  bessely_c.py  bi.py  bi_c.py  buildplots.py  chebyt.py  chebyu.py  coulombf.py  coulombf_c.py  coulombg.py  coulombg_c.py  ellipe.py  ellipf.py  ellipk.py  ellippi.py  gi.py  gi_c.py  hankel1.py  hankel1_c.py  hankel2.py  hankel2_c.py  hermite.py  hi.py  hi_c.py  ker.py  kleinj.py  kleinj2.py  laguerre.py  lambertw.py  lambertw_c.py  (+9 more)
mp4/: __init__.py  calculus.py  ctx_base.py  ctx_fp.py  ctx_mp.py  elliptic.py  function_docs.py  functions.py  hyp.py  identification.py  lib.py  libhyper.py  libmpf.py  linalg.py  math2.py  matrices.py  mpf_impl.py  mptypes.py  odes.py  optimization.py  quadrature.py  rational.py  seg.py  usertools.py  visualization.py
mp4/tests/: runtests.py  test_basic_ops.py  test_bitwise.py  test_calculus.py  test_compatibility.py  test_convert.py  test_diff.py  test_division.py  test_functions.py  test_functions2.py  test_gammazeta.py  test_hp.py  test_identify.py  test_interval.py  test_linalg.py  test_matrices.py  test_mpmath.py  test_ode.py  test_pickle.py  test_power.py  test_quad.py  test_rootfinding.py  test_special.py  test_summation.py  test_trig.py  test_zfail.py  torture.py
mpmath/: __init__.py  __main__.py  _interactive.py  calculus.py  conftest.py  ctx_base.py  ctx_fp.py  ctx_iv.py  ctx_mp.py  ctx_mp_python.py  elliptic.py  function_docs.py  functions.py  functions2.py  gammazeta.py  identification.py  interval.py  intervals.py  lib.py  libelefun.py  libfp.py  libhyper.py  libintmath.py  libmpc.py  libmpf.py  libmpi.py  linalg.py  math2.py  matrices.py  mpmath.py  mptypes.py  odes.py  optimization.py  quad.py  quadrature.py  rational.py  settings.py  specfun.py  test_mpmath.py  usertools.py  (+1 more)
mpmath/apps/: derivatives.py  extrafun.py  interval.py  pidigits.py  polynomials.py  quad.py
mpmath/calculus/: __init__.py  approximation.py  calculus.py  differentiation.py  extrapolation.py  inverselaplace.py  odes.py  optimization.py  polynomials.py  quadrature.py
mpmath/functions/: __init__.py  bessel.py  elliptic.py  expintegrals.py  factorials.py  functions.py  hypergeometric.py  orthogonal.py  qfunctions.py  rszeta.py  signal.py  signals.py  test.py  theta.py  zeta.py  zetazeros.py
mpmath/lib/: __init__.py  complexop.py  constants.py  convert.py  floatop.py  functions.py  numerals.py  squareroot.py  util.py
mpmath/lib_old/: constants.py  floatop.py  numerals.py  util.py
mpmath/libmp/: __init__.py  backend.py  gammazeta.py  libelefun.py  libfmt.py  libhyper.py  libintmath.py  libmpc.py  libmpf.py  libmpi.py
mpmath/matrices/: __init__.py  calculus.py  eigen.py  eigen_markov.py  eigen_symmetric.py  linalg.py  matrices.py
mpmath/specfun/: __init__.py  bessel.py  constants.py  factorials.py  hyper.py  misc.py
mpmath/tests/: benchmark.py  conftest.py  elliptic_torture_tests.py  extratest_bessel.py  extratest_gamma.py  extratest_zeta.py  nostdout.py  runtests.py  stresstest_log.py  test_basic_ops.py  test_bitwise.py  test_calculus.py  test_cli.py  test_compatibility.py  test_convert.py  test_demos.py  test_diff.py  test_division.py  test_eigen.py  test_eigen_markov.py  test_eigen_symmetric.py  test_elliptic.py  test_extra_gamma.py  test_extra_zeta.py  test_format.py  test_fp.py  test_functions.py  test_functions2.py  test_gammazeta.py  test_hp.py  test_identify.py  test_interval.py  test_issue_metadata_fallback.py  test_levin.py  test_linalg.py  test_matrices.py  test_module.py  test_mpmath.py  test_ode.py  test_pickle.py  (+12 more)
tests/: benchmark.py  runtests.py  test_bitwise.py  test_compatibility.py  test_convert.py  test_division.py  test_functions2.py  test_hp.py  test_mpmath.py  test_power.py  test_quad.py  test_special.py  test_strings.py
(+62 files in other folders)
