[metadata]
name = mpmath
description = Python library for arbitrary-precision floating-point arithmetic
long_description = file: README.rst
version = attr: mpmath.__version__
author = Fredrik Johansson
author_email = fredrik.johansson@gmail.com
url = http://mpmath.org/
license = BSD
classifiers = License :: OSI Approved :: BSD License
              Topic :: Scientific/Engineering :: Mathematics
              Topic :: Software Development :: Libraries :: Python Modules
              Programming Language :: Python
              Programming Language :: Python :: 2
              Programming Language :: Python :: 2.7
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.5
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
              Programming Language :: Python :: Implementation :: CPython
              Programming Language :: Python :: Implementation :: PyPy
project_urls = Source = https://github.com/fredrik-johansson/mpmath
               Tracker = https://github.com/fredrik-johansson/mpmath/issues
               Documentation = http://mpmath.org/doc/current/
[options]
packages = find:
setup_requires = setuptools>=36.7.0
tests_require = mpmath[tests]
[options.extras_require]
tests = pytest >= 4.6
develop = %(tests)s
          pycodestyle
          pytest-cov
          codecov
          wheel
gmpy =
    gmpy2>=2.1.0a4; platform_python_implementation!="PyPy" and python_version>="3.6"
docs = sphinx
[pycodestyle]
select = E101,W191,W291,W293,E111,E112,E113,W292,W391
exclude = .eggs,.git
[tool:pytest]
doctest_optionflags = IGNORE_EXCEPTION_DETAIL
addopts = --doctest-modules
          --ignore=setup.py
          --doctest-glob='*.txt'
norecursedirs = doc/source/plots demo .eggs .git
[coverage:run]
branch = True
omit = mpmath/tests/*
[coverage:report]
exclude_lines = pragma: no cover
                raise NotImplementedError
                return NotImplemented
