[metadata]
name = mpmath
description = Python library for arbitrary-precision floating-point arithmetic
long_description = file: README.rst
version = attr: mpmath.__version__
author = Fredrik Johansson
author_email = fredrik.johansson@gmail.com
url = http://mpmath.org/
license = BSD
classifiers = License :: OSI Approved :: BSD License
              Topic :: Scientific/Engineering :: Mathematics
              Topic :: Software Development :: Libraries :: Python Modules
              Programming Language :: Python
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3 :: Only
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
              Programming Language :: Python :: 3.10
              Programming Language :: Python :: 3.11
              Programming Language :: Python :: Implementation :: CPython
              Programming Language :: Python :: Implementation :: PyPy
project_urls = Source = https://github.com/mpmath/mpmath
               Tracker = https://github.com/mpmath/mpmath/issues
               Documentation = http://mpmath.org/doc/current/
python_requires= >=3.8
[options]
packages = find:
setup_requires = setuptools>=36.7.0
tests_require = mpmath[tests]
[options.extras_require]
tests = pytest >= 6
        numpy
develop = %(tests)s
          pycodestyle
          pytest-cov
          wheel
gmpy =
    gmpy2>=2.1.0a4; platform_python_implementation!="PyPy"
docs = sphinx
[pycodestyle]
select = E101,E111,E112,E113,E703,E712,E713,W191,W291,W292,W293,W391
exclude = .eggs,.git
[tool:pytest]
testpaths = mpmath docs
doctest_optionflags = IGNORE_EXCEPTION_DETAIL
addopts = --doctest-modules --doctest-glob='*.rst'
norecursedirs = docs/plots demo .eggs .git
[coverage:run]
branch = True
omit = mpmath/tests/*
[coverage:report]
exclude_lines = pragma: no cover
                raise NotImplementedError
                return NotImplemented
